fixing overflow

--- a/src/css/composepostmodal.css
+++ b/src/css/composepostmodal.css
@@ -116,6 +116,8 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     z-index: 10;
+    overflow-y: scroll;
+    position: fixed;
   }
 
   .containerComposePost{
